Aligned download area and FIXED NAVBAR THINGY

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@
     left: 0;
     z-index: 1030;
     top: 0;
+    padding-bottom: 0.001%;
+    background-color: #0000004d;
 }
 
 body, html {
@@ -76,7 +78,7 @@ color: white;
   font-family: 'Metrophobic', sans-serif;
   font-size: 50px;
   text-align: center;
-  padding-top: 5%;
+  padding-top: 1.5%;
   color: white;
   padding-bottom: 2%;
 }
